[package]
name = "pomodoro"
version = "0.1.0"
license = "MIT OR Apache-2.0"
authors = ["atarola <anthony.tarola@gmail.com>"]
edition = "2021"

[dependencies]
embassy-embedded-hal = { version = "0.2.0" }
embassy-executor = { version = "0.6.3", features = ["integrated-timers", "task-arena-size-32768", "arch-cortex-m", "executor-thread", "executor-interrupt", "defmt"] }
embassy-futures = { version = "0.1.0" }
embassy-net = { version = "0.5.0", features = ["defmt", "tcp", "dhcpv4", "medium-ethernet"] }
embassy-net-enc28j60 = { version = "0.1.0", features = ["defmt"] }
embassy-net-esp-hosted = { version = "0.1.0", features = ["defmt"] }
embassy-nrf = { version = "0.2.0", features = ["defmt", "nrf52840", "time-driver-rtc1", "gpiote", "unstable-pac", "time", "nfc-pins-as-gpio"] }
embassy-sync = { version = "0.6.1", features = ["defmt"] }
embassy-time = { version = "0.3.2", features = ["defmt", "defmt-timestamp-uptime"] }
embassy-usb = { version = "0.3.0", features = ["defmt"] }
embedded-io = { version = "0.6.0", features = ["defmt-03"]  }
embedded-io-async = { version = "0.6.1", features = ["defmt-03"] }

cortex-m = { version = "0.7.6", features = ["inline-asm", "critical-section-single-core"] }
cortex-m-rt = "0.7.0"
defmt = "0.3"
defmt-rtt = "0.4"
embedded-hal = { version = "1.0" }
embedded-hal-async = { version = "1.0" }
embedded-hal-bus = { version = "0.1", features = ["async"] }
embedded-storage = "0.3.1"
fixed = "1.10.0"
microfft = "0.5.0"
num-integer = { version = "0.1.45", default-features = false }
panic-probe = { version = "0.3", features = ["print-defmt"] }
rand = { version = "0.8.4", default-features = false }
serde = { version = "1.0.136", default-features = false }
static_cell = { version = "2" }
usbd-hid = "0.8.1"

# screen
display-interface = "0.4"
embedded-graphics = "0.8.0"
mipidsi = { git = "https://github.com/almindor/mipidsi.git" }
heapless = "0.8.0"
embedded-layout = "0.4.1"

# prox/gesture/light
apds9960 = "0.1.0"

[profile.release]
debug = 2